# deeptech-ma-momentum

./: .gitignore  pyproject.toml
notebooks/1_data_understanding/: 1.0_data_cleaning_and_exploration.ipynb
notebooks/2_llm_taxonomy/: 2.1_embedding_and_clustering.ipynb
notebooks/3_time_series_signal/: 3.0_time_series_aggregation.ipynb  3.1_sentiment_and_signal_generation.ipynb
notebooks/4_backtesting/: 4.0_strategy_application.ipynb  4.1_backtest_engine_and_evaluation.ipynb
src/: llm_tools.py  market_data.py  metrics.py
